namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    name: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    name: api
