poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  labels:
    app: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryujx8519.azurecr.io/poi:vk
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
                path: /api/poi/healthcheck
                port: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
