tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripviewer
  namespace: api
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryujx8519.azurecr.io/tripviewer:vk
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
                path: /
                port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: api
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
